--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.4.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
